# chime_sims

./: .gitignore  Pipfile  requirements.txt
bayes_chime/: __init__.py  chime_2.py  pyproject.toml
bayes_chime/_config/: __init__.py  config.py
bayes_chime/_parameters/: __init__.py  _census.py  _epidemiologic.py  _epidemiological.py  _logistic.py  _network.py  _region.py  parameters.py
bayes_chime/models/: _base.py  compartmental.py
bayes_chime/normal/scripts/: cli.py  utils.py
notebooks/: How-to-use-normal-approximations-module.ipynb
penn_medicine/chime/: sir.py
