[tool.poetry]
name = "bayes_chime"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.9"
ConfigArgParse = "^1.2.3"
gitpython = "^3.1.1"
seaborn = "^0.10.1"
numpy = "^1.18.4"
pandas = "^1.0.3"
gvar = "^11.4"
lsqfit = "^11.5.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pycco = "^0.6.0"
pytest = "^5.4.1"
notebook = "^6.0.3"
jupyterlab = "^2.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
